--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,12 @@
 # VSCode
 .vscode/
 
-accessto.egg-info/
+accessopp.egg-info/
 tests/__pycache__/
 src/__pycache__/
-src/accessto.egg-info
-src/accessto/__pycache__/
-src/accessto/travel_costs/__pycache__/
+src/accessopp.egg-info
+src/accessopp/__pycache__/
+src/accessopp/travel_costs/__pycache__/
 
 
 # This is an interim file storing snippets for various parts of the documentation. 
