--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ build-backend = "setuptools.build_meta"
 requires = ["setuptools>=61.0.0", "wheel"]
 
 [project]
-name = "accessto"
+name = "accessopp"
 version = "0.01"
 authors = [
     {name="Bryce Sharman"}
@@ -19,5 +19,5 @@ classifiers = [
 dependencies = ["requests", "r5py"]
 keywords = ["accessibility", "transport"]
 [project.urls]
-homepage = "https://github.com/bryce-sharman/accessto"
+homepage = "https://github.com/bryce-sharman/accessopp"
 
