--- a/environment.yml
+++ b/environment.yml
@@ -6,12 +6,15 @@ channels:
 # the default r5py installation. Trying to resolve this by constraining
 # the versions. Test later on to see if we can remove specifying 
 # fiona and pyogrio in this file to use the one coming directly from r5py.
+
+# I just added the jpype requirement, but I haven't tested it yet.
 dependencies:
   - python=3.11
   - pyogrio=0.7.*
   - fiona=1.9.*
+  - jpype1=1.5.0
   - r5py=0.1.1
   - jupyterlab
   - yaml
   - openpyxl
-
+  - install-jdk=17
